benchmarks/verus/bignum/vericoder_grok-code_15-09_10h42/debug/bignum_Add_iter1_error.log
=== Verification Error - Iteration 1 ===
File: benchmarks/verus/bignum/files/bignum_Add.rs
Time: 2025-09-15 11:16:39

Full Error Output:
--------------------------------------------------------------------------------
Compilation failed: error: invalid suffix `nat` for number literal
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_10h42/bignum_Add_impl.rs:46:21
   |
46 |     let mut carry = 0nat;
   |                     ^^^^ invalid suffix `nat`
   |
   = help: the suffix must be one of the numeric types (`u32`, `isize`, `f32`, etc.)

error[E0277]: cannot add `vstd::prelude::nat` to `{integer}`
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_10h42/bignum_Add_impl.rs:28:29
   |
28 |     let sum = a_val + b_val + carry;
   |                             ^ no implementation for `{integer} + vstd::prelude::nat`
   |
   = help: the trait `std::ops::Add<vstd::prelude::nat>` is not implemented for `{integer}`
   = help: the following other types implement trait `std::ops::Add<Rhs>`:
             `&f128` implements `std::ops::Add<f128>`
             `&f128` implements `std::ops::Add`
             `&f16` implements `std::ops::Add<f16>`
             `&f16` implements `std::ops::Add`
             `&f32` implements `std::ops::Add<f32>`
             `&f32` implements `std::ops::Add`
             `&f64` implements `std::ops::Add<f64>`
             `&f64` implements `std::ops::Add`
           and 56 others

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0277`.

--------------------------------------------------------------------------------

Additional Output:
error: invalid suffix `nat` for number literal
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_10h42/bignum_Add_impl.rs:46:21
   |
46 |     let mut carry = 0nat;
   |                     ^^^^ invalid suffix `nat`
   |
   = help: the suffix must be one of the numeric types (`u32`, `isize`, `f32`, etc.)

error[E0277]: cannot add `vstd::prelude::nat` to `{integer}`
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_10h42/bignum_Add_impl.rs:28:29
   |
28 |     let sum = a_val + b_val + carry;
   |                             ^ no implementation for `{integer} + vstd::prelude::nat`
   |
   = help: the trait `std::ops::Add<vstd::prelude::nat>` is not implemented for `{integer}`
   = help: the following other types implement trait `std::ops::Add<Rhs>`:
             `&f128` implements `std::ops::Add<f128>`
             `&f128` implements `std::ops::Add`
             `&f16` implements `std::ops::Add<f16>`
             `&f16` implements `std::ops::Add`
             `&f32` implements `std::ops::Add<f32>`
             `&f32` implements `std::ops::Add`
             `&f64` implements `std::ops::Add<f64>`
             `&f64` implements `std::ops::Add`
           and 56 others

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0277`.
